--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-simple-typewriter": "^5.0.1",
     "sweetalert2": "^11.12.3"
   },
   "devDependencies": {
