--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^10.12.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.13",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
